--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@0,400;0,600;0,700;700&display=swap" rel="stylesheet">
     <title>Vertigo</title>
 </head>
 
 <body>
+    <div class="conteudo">
+        <img src="/pg-mb/img desktop.png" alt="">
+    
+
     <header>
         <img src="./pg-mb/logo.png" alt="logo">
     </header>
@@ -38,7 +42,7 @@
                     <label for="senha">Senha</label>
                     <a href="">Esqueceu a senha?</a>
                   </div>
-                  
+
                     <input type="password" placeholder="Digite sua senha" id="senha">
                 </div>
 
@@ -50,6 +54,7 @@
             </form>
         </section>
     </main>
+</div>
 </body>
 
 </html>
