inserção do background desktop

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 
 <body>
     <div class="conteudo">
-        <img src="/pg-mb/img desktop.png" alt="">
-    
+       
 
     <header>
         <img src="./pg-mb/logo.png" alt="logo">
@@ -54,6 +53,9 @@
             </form>
         </section>
     </main>
+</div>
+<div class="bg-desktop">
+    <img src="/pg-mb/img desktop.png" alt="">
 </div>
 </body>
 
